Fixed height for white spacing in modal component.

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -41,7 +41,7 @@
 
 .main{
     display: flex;
-    height: 100vh;
+    height: 100%;
     align-items: center;
     justify-content: center;
 }
